# pringle-scope

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  partitions_singleapp_extralarge.csv  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
firmware/components/camera/: CMakeLists.txt
firmware/components/camera/include/: camera.h
firmware/components/camera/sources/: camera.c
firmware/components/wifi/: CMakeLists.txt
firmware/components/wifi/include/: http_server.h
firmware/components/wifi/sources/: http_server.c
firmware/main/: CMakeLists.txt  main.c
hardware/: Adjustment_Base.ipt  Adjustment_Base_Cap.ipt  Camera_Housing_Top.ipt  Camera_Mount.ipt  Clamping_Ring.ipt  Clamping_Ring_Mountable.ipt  Mirror_Housing_Bottom.ipt  Mirror_Housing_Top.ipt  Telescope.iam
hardware/3d-print/: Adjustment_Base.3mf  Adjustment_Base.stl  Adjustment_Base_Cap.3mf  Adjustment_Base_Cap.stl  Camera_Housing.3mf  Camera_Housing.stl  Camera_Housing_Test.stl  Camera_Housing_Top.stl  Camera_Mount.3mf  Camera_Mount.stl  Clamping_Ring.3mf  Clamping_Ring.stl  Clamping_Ring_Mountable.stl  Mirror_Housing.3mf  Mirror_Housing_Bottom.3mf  Mirror_Housing_Bottom.stl  Mirror_Housing_Top.stl  Screw_Hole_Test.3mf  Screw_Hole_Test.stl
